# mindreader_analysis

./: .env.sample  .gitignore  README.md  create_db.py  explore_activations.py  file-to-db.py  files_to_db.py  notes.md  pyproject.toml  seed_correlations_to_file.py  seed_db.py  test_s3_upload.py
db_scripts/: seed_db.py  seed_db_to_files.py
new_outputs_3_28/: explore2.py
test_scripts/: explore_activations.py  seed_correlations_to_file.py  test_gptv.py
vision_autointerp/: explore2.py  main.py
